<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_input"
            android:textSize="@dimen/font_size" />

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_details" />

        <CheckBox
            android:id="@+id/checkBox_nightly"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_nightly" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_hours" />

        <CheckBox
            android:id="@+id/CheckBox_terminal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_terminal" />

        <CheckBox
            android:id="@+id/CheckBox_airport"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_airport" />

    </LinearLayout>

    <Button
        android:id="@+id/click_btn"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/androidshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/label_calculate"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_sum_text"
            android:textColor="@color/grey" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/text_result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="total"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/grey" />

    </LinearLayout>

</LinearLayout>
